web socket separated from chat handler to spepated service as handler
