# server/cmd/api/docs/swagger.json
@@ -571,22 +571,6 @@
                     }
                 }
             }
-        },
-        "/ws": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "API for user to create a web socket connection",
-                "tags": [
-                    "Users Socket"
-                ],
-                "summary": "Sever Socket Connection (User)",
-                "operationId": "ServeWebSocket",
-                "responses": {}
-            }
         }
     },
     "definitions": {
