# server/pkg/api/server.go
@@ -1,13 +1,13 @@
 package http
 
 import (
+	"github.com/gin-gonic/gin"
+	docs "github.com/nikhilnarayanan623/react-go-messenger/server/cmd/api/docs"
 	"github.com/nikhilnarayanan623/react-go-messenger/server/pkg/api/handler/interfaces"
 	"github.com/nikhilnarayanan623/react-go-messenger/server/pkg/api/middleware"
 	"github.com/nikhilnarayanan623/react-go-messenger/server/pkg/api/routes"
+	socket "github.com/nikhilnarayanan623/react-go-messenger/server/pkg/api/service"
 	"github.com/nikhilnarayanan623/react-go-messenger/server/pkg/config"
-
-	"github.com/gin-gonic/gin"
-	docs "github.com/nikhilnarayanan623/react-go-messenger/server/cmd/api/docs"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -19,7 +19,7 @@ type Server struct {
 
 func NewServerHTTP(cfg config.Config, authHandler interfaces.AuthHandler,
 	middleware middleware.Middleware, userHandler interfaces.UserHandler,
-	chatHandler interfaces.ChatHandler) *Server {
+	chatHandler interfaces.ChatHandler, socketService socket.WebSocketService) *Server {
 
 	engine := gin.New()
 
@@ -27,10 +27,9 @@ func NewServerHTTP(cfg config.Config, authHandler interfaces.AuthHandler,
 	engine.Use(gin.Logger())
 
 	docs.SwaggerInfo.BasePath = routes.BaseUrl
-
 	engine.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
-	routes.SetupRoutes(engine, authHandler, middleware, userHandler, chatHandler)
+	routes.SetupRoutes(engine, authHandler, middleware, userHandler, chatHandler, socketService)
 
 	return &Server{
 		engine: engine,
@@ -39,5 +38,6 @@ func NewServerHTTP(cfg config.Config, authHandler interfaces.AuthHandler,
 }
 
 func (c *Server) Start() error {
+
 	return c.engine.Run(c.port)
 }
